--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,36 +1,34 @@
-<div>
-    <div class="container">
+<div class="container">
         <br>
         
         <div class="row justify-content-center">
             <div class="card">
                 <article class="card-body">
                     <h4 class="card-title mb-4 mt-1">User Register</h4>
-                        <form>
+                        <form [formGroup]="userregisterBuilder" (ngSubmit)="onRegister()">
                             <div class="form-group">
                                 <label>Your Name</label>
-                                <input #username class="form-control" placeholder="Name">
+                                <input #username formControlName = "username" class="form-control" placeholder="Name">
                             </div> <!-- form-group// -->
                             <div class="form-group">
                                 <label>Your Email</label>
-                                <input #useremail class="form-control" placeholder="Email" type="email">
+                                <input #useremail formControlName = "useremail" class="form-control" placeholder="Email" type="email">
                             </div> <!-- form-group// -->
                             <div class="form-group">
                                 <label>Your Password</label>
-                                <input #password class="form-control" placeholder="******" type="password">
+                                <input #password formControlName = "password" class="form-control" placeholder="******" type="password">
                             </div> <!-- form-group// --> 
                             <div class="form-group">
                                 <label>Confirm Password</label>
-                                <input #confirmpassword class="form-control" placeholder="******" type="password">
+                                <input #confirmpassword formControlName = "confirmpassword" class="form-control" placeholder="******" type="password">
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary btn-block"> Register  </button>
+                                <button type="submit" [disabled] = "!userregisterBuilder.valid" class="btn btn-primary btn-block"> Register  </button>
                             </div> <!-- form-group// -->                                                           
                         </form>
                 </article>
-            </div> <!-- card.// -->
+            </div><!--  card.// -->
         </div> <!-- row.// -->
 
     </div> 
     <!--container end.//-->
-</div>
